[package]
name = "thanatos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

alloy-json-abi = { version = "0.4.2", path = "./core/crates/json-abi" }
alloy-primitives = { version = "0.4.2", path = "./core/crates/primitives" }
alloy-dyn-abi = { version = "0.4.2", path = "./core/crates/dyn-abi" }
alloy-sol-types = { version = "0.4.2", path = "./core/crates/sol-types", features=['json'] }
syn-solidity = { version = "0.4.2", path = "./core/crates/syn-solidity" }